--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ h1, p, h2 {
     margin: 0;
 }
 
-i {
+i:hover {
     cursor: pointer;
+    opacity: 0.5;
 }
 
 i.xmark {
@@ -55,9 +56,9 @@ i.xmark {
     padding: 1.1em 1.5em ;
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     border: 1px solid rgb(180, 171, 171);
     border-radius: 15px;
-    
     overflow: hidden;
 }
 
